--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -1,14 +1,10 @@
 .banner-principal-decorativo
   &-1
-    animation: float1 3.5s ease-in-out infinite alternate
-    position: absolute
-    top: 40%
-    right: 50%
-  &-2
     animation: float1 2.8s ease-in-out infinite alternate
     position: absolute
-    top: 51%
-    right: 30%
+    top: 40%
+    right: 33%
+    width: 290px
 
 
 @keyframes float1
@@ -17,3 +13,30 @@
 
   100%
     transform: translateY(0px)
+
+
+.dimesion
+   @media (max-width: 500px)
+    width: 2%
+    margin-left: 25%
+
+
+.testdisenio
+    right: 325px    
+    background-color: rgba(255, 255, 255, 0.95)
+
+.testdisenio2
+  left: 508px
+
+.lista-ol--cuadro__vineta 
+  background-color: #fc4b52
+  display: inline-block
+  min-width: 24px
+  height: 24px
+  color: #fff
+  position: relative
+  margin-right: 8px
+
+.img-reducir-paso
+  width: 500px
+  height: 300px
