--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -54,12 +54,12 @@ $color-institucional: #ff8f00
 
 // Colores Curso ---------------------------------------
 
-$color-primario: #522981
-$color-secundario: #7DD3E9
-$color-acento-contenido: #FF4A69
-$color-acento-botones: #FFCD0D
-$color-adicional-1: #CDDC39
-$color-adicional-2: #00BCD4
+$color-primario: #fc4b52
+$color-secundario: #dff7f9
+$color-acento-contenido: #a7e446
+$color-acento-botones: #feca2e
+$color-adicional-1: #EFEFEF
+$color-adicional-2: #F9F7EC
 
 // Color Tipografias -----------------------------------
 $color-headers: $color-sistema-texto
@@ -79,7 +79,7 @@ $color-btn-texto: $color-sistema-texto
 
 // Colores banner --------------------------------------
 $color-banner-fondo: $color-primario
-$color-banner-text: $white
+$color-banner-text: $black
 
 // Colores anexos
 $color-fondo-anexo: $color-sistema-g
