--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -28,6 +28,28 @@
 .testdisenio2
   left: 508px
 
+.testdisenioiz
+  left: 1px    
+  background-color: rgba(255, 255, 255, 0.95)
+
+.testdisenioiz2
+  right: 508px
+
+.linea-tiempo-c__header__btn 
+  background-color: #feca2e
+  
+.linea-tiempo-c__header__btn--left
+  background-color: #feca2e
+    
+.linea-tiempo-c__header__btn--right
+  background-color: #feca2e
+      
+.pasos-b__header__btn--left
+  background-color: #feca2e
+        
+.pasos-b__header__btn--right 
+  background-color: #feca2e
+
 .lista-ol--cuadro__vineta 
   background-color: #fc4b52
   display: inline-block
@@ -40,3 +62,36 @@
 .img-reducir-paso
   width: 500px
   height: 300px
+
+.fa-check
+  color: #FC4B52
+
+.tarjeta--naranja 
+  background-color: #FEE18C
+
+.acordion__accion__btn--a 
+  background-color: #a7e446
+
+.slyder-a__btn--sigt
+  background-color: #feca2e
+
+.slyder-a__btn--atrs
+  background-color: #feca2e
+
+.bloque-texto-a.color-primario 
+  background-color: #E8E8E8
+
+.tarjeta--gris 
+  background-color: #dff7f9
+
+.tarjeta--container
+
+.tarjeta:last-child
+
+.tarjeta:first-child 
+
+.tarjeta1
+  background-color: #FBA7AA
+
+.tarjeta2
+  background-color: #F2787D
