Correcciones de hallazgos

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -89,8 +89,25 @@
   width: 500px
   height: 300px
 
-.bloque-texto-b i 
+i.fas.fa-quote-left
+  font-size: 2.5em
   color: #FC4B52
+
+i.fas.fa-quote-right
+  font-size: 2.5em
+  color: #FC4B52
+
+.bloque-texto-b i 
+  font-size: 1em
+  color: #12263F
+
+.bloque-texto-b i:last-of-type 
+  margin-left: 1px
+
+
+.bloque-texto-b i:first-of-type 
+  margin-right: 1px
+
 
 .tarjeta--naranja 
   background-color: #FFF7DE
@@ -130,3 +147,4 @@
 
 .bloque-texto-a.color-secundario:before 
   background-color: #D9EAEA
+
