--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -134,10 +134,15 @@ i.fas.fa-quote-right
 .tarjeta:first-child 
 
 .tarjeta1
-  background-color: #FBA7AA
+  background-color: #FFE4E5
+  border-top-left-radius: 10px
+  border-top-right-radius: 10px
 
 .tarjeta2
-  background-color: #F2787D
+  background-color: #FEC8CA
+  border-bottom-left-radius: 10px
+  border-bottom-right-radius: 10px
+
 
 .bloque-texto-a.color-acento-contenido 
   background-color: #E8E8E8
@@ -148,3 +153,33 @@ i.fas.fa-quote-right
 .bloque-texto-a.color-secundario:before 
   background-color: #D9EAEA
 
+.bloque-texto-g1__img 
+  width: 61%
+  position: absolute
+  top: 0
+  left: 40%
+  bottom: 0
+  background-position: center
+  background-size: cover
+  @media (max-width: 500px)
+    height: 250px
+    width: 100%
+    left: 0%
+
+.bloque-texto-g1__texto 
+  position: relative
+  width: 65%
+  background-color: rgba(255, 255, 255, 0.95)
+  right: 35%
+  @media (max-width: 500px)
+    width: 100%
+    right: 0%
+
+.bloque-texto-g2__texto 
+  position: relative
+  width: 70%
+  background-color: rgba(255, 255, 255, 0.95)
+  right: 30%
+  @media (max-width: 500px)
+    width: 100%
+    right: 0%
