--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -183,3 +183,23 @@ i.fas.fa-quote-right
   @media (max-width: 500px)
     width: 100%
     right: 0%
+
+.img-infografica-b__modal
+  background-color: #ffffff00    
+
+.img-infografica-b__modal__contenido div > *
+    color: #000 !important  
+
+.img-infografica-b__modal__btn-cerrar i
+  display: block
+  line-height: 0.8em
+  font-size: 1.5rem
+  color: #000 
+
+.boton1
+  @media (max-width:500px)
+    top: -30%
+    left: 0% !important    
+.taj_alt
+  margin-top: 182px
+  position: absolute       
